--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
           <h3>Adventure Golf</h3>
         </div>
         <div id="f3">
-          <h3>coffee shop</h3>
+          <h3>Coffee Shop</h3>
           <h3>LEAGUES</h3>
-          <h3>Contact us</h3>
+          <h3>Contact Us</h3>
         </div>
         <div id="f4">
           <h4>
@@ -202,7 +202,7 @@
             CHISLEHURST <br />
             KENT <br />
             BR7 6RP <br />
-            TEL: 0208 309 0181 <br />
+            TEL: 0832 2488099 <br />
             GET DIRECTIONS <br />
           </h4>
         </div>
