--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             CHISLEHURST <br />
             KENT <br />
             BR7 6RP <br />
-            TEL: 0832 2488099 <br />
-            GET DIRECTIONS <br />
+            TEL: +91 9380127099 <br />
+            By Shreyas <br />
           </h4>
         </div>
       </div>
